--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -8,7 +8,6 @@
 nav {
   background-color: #173358;
   height: 80px;
-
   position: fixed;
   top: 0;
   left: 0;
@@ -17,14 +16,13 @@ nav {
 }
 
 .logo img {
-  display: inline;
+  display: inline-block;
   vertical-align: middle;
   padding-left: 30px;
 }
 nav ul {
   display: inline-block;
   list-style: none;
-
 }
 
 nav ul li {
