--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -22,6 +22,8 @@ ul {
   line-height: 80px;
   padding-top: 10px;
 }
+
+/* inizio vertical align */
 .container .logo {
   display: inline-block;
   vertical-align: middle;
@@ -103,7 +105,6 @@ li {
 
 .bg-lightgrey {
   background-color: #D3D3D3;
-  height: 100px;
   text-align: center;
   line-height: 100px;
 }
@@ -112,6 +113,7 @@ li {
   color: black;
   font-family: Verdana, sans-serif;
   font-weight: 100;
+  height: 35px;
 }
 
 .bg-lightgrey p {
@@ -121,4 +123,121 @@ li {
 
 .main {
   height: 100vh;
+  width: 100%;
+}
+.row-1 {
+  padding: 50px 70px;
+}
+.row-1:after {
+  content: '';
+  clear: both;
+  display: table;
+}
+
+.col-1 {
+  float: left;
+  width: 18%;
+  /*background-color: #ABCFE8; /* cyan*/
+  margin-right: 2%;
+  height: 370px;
+  text-align: center;
+  color: #7BB928;
+  font-family: Verdana, sans-serif;
+}
+.col-1 img {
+  height: 150px;
+  padding-bottom: 10px;
+}
+
+#linea-1 {
+  border: 1px solid #808080;
+  margin: 20px 120px;
+}
+.col-1 p {
+  color: #808080;
+  font-family: Verdana, sans-serif;
+  padding: 5px 0;
+  margin: 0 10px;
+}
+.col-2 {
+  float: left;
+  width: 60%;
+  /*background-color: #ABCFE8; /* cyan*/
+  height: 370px;
+  text-align: center;
+  color: #7BB928;
+  font-family: Verdana, sans-serif;
+}
+
+.col-2 img {
+  height: 150px;
+  padding-bottom: 10px;
+}
+
+#linea-2 {
+  border: 1px solid #808080;
+  margin: 50px 520px;
+}
+
+.col-2 p {
+  color: #808080;
+  font-family: Verdana, sans-serif;
+  margin: 0 10px;
+}
+
+.col-3 {
+  float: left;
+  width: 18%;
+  /*background-color: #ABCFE8; /* cyan*/
+  margin-left: 2%;
+  height: 370px;
+  text-align: center;
+  color: #7BB928;
+  font-family: Verdana, sans-serif;
+}
+
+.col-3 img {
+  height: 150px;
+  padding-bottom: 10px;
+}
+
+#linea-3 {
+  border: 1px solid #808080;
+  margin: 20px 120px;
+}
+
+.col-3 p {
+  color: #808080;
+  font-family: Verdana, sans-serif;
+  padding: 5px 0;
+  margin: 0 10px;
+}
+
+.row-2 {
+  padding: 50px 70px;
+}
+
+.row-2:after {
+  content: '';
+  clear: both;
+  display: table;
+}
+.col-4 {
+  float: left;
+  width: 50%;
+  /*background-color: #ABCFE8;  cyan*/
+  height: 700px;
+  text-align: center;
+}
+
+.col-4 img {
+  height: 100%;
+}
+
+.col-5 {
+  float: left;
+  width: 50%;
+  /*background-color: #ABCFE8; /* cyan*/
+  height: 700px;
+  text-align: left;
 }
